新增所有卡片的alert對話及次選單項目

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="actions">
                     <a href="#movie" class="btn-services fw-bold text-decoration-none">充實自我</a>
                     <a href="#imgcard" class="btn-services fw-bold text-decoration-none">實踐腳步</a>
-                    <a href="#Carousel" class="btn-services fw-bold text-decoration-none">最新作品</a>
+                    <a href="#Carousel" class="btn-services fw-bold text-decoration-none">最新消息</a>
                 </div>
             </div>
         </div>
@@ -48,47 +48,25 @@
                         <a class="nav-link mx-2 active" aria-current="page" href="#">首頁</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link mx-2 active" href="#Carousel">最新作品</a>
+                        <a class="nav-link mx-2 active" href="#Carousel">最新消息</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link mx-2 active" href="#movie">充實自我</a>
                     </li>
-                    <!-- <li class="nav-item">
-                        <a class="nav-link mx-2 active" href="#imgcard"> 成品集</a>
-                    </li> -->
-                    <li class="nav-item dropdown active">
-                        <a class="nav-link mx-2 dropdown-toggle" href="#imgcard" id="portfolios" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">成品集</a>
-
-                        <ul class="dropdown-menu active" aria-labelledby="portfolio">
-                            <li><a class="dropdown-item" href="#imgcard">美工作品</a></li> 
-
-                            <li><a class="dropdown-item" href="#Carousel">最新作品</a></li> 
-                        </ul>
+                    <li class="nav-item">
+                        <a class="nav-link mx-2 active" href="#imgcard"> 作品集</a>
                     </li>
-                    <!-- <li class="nav-item dropdown active">
-                        <a class="nav-link mx-2 dropdown-toggle" href="#" id="portfolio" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            關於我們
-                        </a>
-                        <ul class="dropdown-menu active" aria-labelledby="portfolio">
-                            <li><a class="dropdown-item" href="#map">交通地圖</a></li> 
-                            
-                            <li><a class="dropdown-item" href="#contact_us">聯絡我們</a></li> 
-                        </ul>
-                    </li> -->
                     <li class="nav-item dropdown active">
-                        <a class="nav-link mx-2 dropdown-toggle" href="#" id="portfolious" role="button"
+                        <a class="nav-link mx-2 dropdown-toggle" href="#" id="contacts" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             關於我們
                         </a>
-                        <ul class="dropdown-menu active" aria-labelledby="portfolio">
+                        <ul class="dropdown-menu active" aria-labelledby="contacts">
                             <li><a class="dropdown-item" href="#map">交通地圖</a></li> <!-- 交通地圖 -->
-
+                            <li><a class="dropdown-item" href="#about_us">關於我們</a></li> <!-- 關於我們 -->
                             <li><a class="dropdown-item" href="#contact_us">聯絡我們</a></li> <!-- 聯絡我們 -->
                         </ul>
                     </li>
-                    
                 </ul>
             </div>
         </div>
@@ -99,7 +77,7 @@
     <!-- 輪播 -->
     <div id="Carousel" class="headfont text-center pt-4">
         <p>
-            <span class="flex-line" style="font-size: xx-large;">最新作品</span>
+            <span class="flex-line" style="font-size: xx-large;">最新活動</span>
         </p>
     </div>
     <div class="container-carousel">
@@ -120,12 +98,10 @@
                         style="width:100%">
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                    <img src="https://picsum.photos/id/1077/1920/600" title="線上社群平臺建置" alt="社群平臺系統" class="d-block"
-                        style="width:100%">
+                    <img src="https://picsum.photos/id/1077/1920/600" title="線上社群平臺建置" alt="社群平臺系統" class="d-block" style="width:100%">
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                    <img src="https://picsum.photos/id/345/1920/600" title="校園資訊系統建置" alt="校園資訊系統" class="d-block"
-                        style="width:100%">
+                    <img src="https://picsum.photos/id/345/1920/600" title="校園資訊系統建置" alt="校園資訊系統" class="d-block" style="width:100%">
                 </div>
             </div>
 
@@ -179,7 +155,7 @@
     <div class="container-fluid container-2">
         <div class="row h-100">
             <div class="col-sm-12 col-lg-5">
-                <div class="col-lg-4  w-100 h-100 p-5 mt-5" style="color:#fff;">
+                <div class="col-lg-4  w-100 h-100 p-5 mt-5" style="color:#fff;">                   
                     With the concept of "professionalism, enthusiasm, innovation, and touching" as the service to the
                     people, we are committed to the four major tasks of vocational training, skills certification,
                     employment services, and entrepreneurial guidance. In response to changes in the economic
@@ -210,7 +186,7 @@
     <!-- imgcard -->
     <div id="imgcard" class="headfont text-center pt-5">
         <p>
-            <span class="flex-line" style="font-size: xx-large;">實踐腳步-成果成品集</span>
+            <span class="flex-line" style="font-size: xx-large;">實踐腳步-成果作品集</span>
         </p>
     </div>
     <!-- imgcard-container -->
@@ -228,7 +204,7 @@
                         <h4 class="card-title">Squirrel</h4>
                         <br class="card-text">
                         Use shading to create an abstract squirrel image, bright and simple.<br>
-                        <br><a href="javascript:void(0);" onclick="alert('用明暗度創造抽象的松鼠形象，明亮且簡約。');"
+                        <br><a href="javascript:void(0);" onclick="alert('觀看imgcard簡介');"
                             class="btn btn-dark">Profile</a>
                     </div>
                 </div>
@@ -245,7 +221,7 @@
                         <br class="card-text">
                         The image of the dog is constructed from basic shapes, with bright colors and a quasi-geometric
                         style.
-                        <br><a href="javascript:void(0);" onclick="alert('以基礎形狀構建狗的形象，色彩鮮明，帶有類幾何之風格。');"
+                        <br><a href="javascript:void(0);" onclick="alert('觀看imgcard簡介');"
                             class="btn btn-dark">Profile</a>
                     </div>
                 </div>
@@ -264,7 +240,7 @@
                         <br class="card-text">
                         Through the changes in tone of the wheel outline and simple lines, it presents the soft
                         atmosphere of the butterfly.
-                        <br><a href="javascript:void(0);" onclick="alert('通過輪輪廓色調變化，簡單的線條，呈現蝴蝶柔和的氣息。');"
+                        <br><a href="javascript:void(0);" onclick="alert('觀看imgcard簡介');"
                             class="btn btn-dark">Profile</a>
                     </div>
                 </div>
@@ -286,7 +262,7 @@
                         <br class="card-text">
                         Use simple shapes and bright colors to express the elegance of the whale and the beauty of
                         abstract art.
-                        <br><a href="javascript:void(0);" onclick="alert('用簡單的形狀與鮮豔色彩呈現鯨魚的優雅，展現抽象藝術的美感。');"
+                        <br><a href="javascript:void(0);" onclick="alert('觀看imgcard簡介');"
                             class="btn btn-dark">Profile</a>
                     </div>
                 </div>
@@ -303,7 +279,7 @@
                         <h4 class="card-title">Fowl</h4>
                         <br class="card-text">
                         Use basic shapes and bright colors to create a simple and vivid style of chicken.<br>
-                        <br><a href="javascript:void(0);" onclick="alert('用基本形狀和亮麗色彩創造簡約的雞隻生動風格。');"
+                        <br><a href="javascript:void(0);" onclick="alert('觀看imgcard簡介');"
                             class="btn btn-dark">Profile</a>
                     </div>
                 </div>
@@ -321,7 +297,7 @@
                         <br class="card-text">
                         The use of colors and shapes enlivens the elephant's stable image and makes people feel more
                         comfortable.
-                        <br><a href="javascript:void(0);" onclick="alert('運用色系及形狀，活潑化大象穩動的形象，讓人增加舒適感。');"
+                        <br><a href="javascript:void(0);" onclick="alert('觀看imgcard簡介');"
                             class="btn btn-dark">Profile</a>
                     </div>
                 </div>
@@ -342,7 +318,7 @@
                         <br class="card-text">
                         The geometric shape emphasizes the characteristics of the fox's mouth, ears and long tail,
                         showing its cunning and flexibility.
-                        <br><a href="javascript:void(0);" onclick="alert('以幾何形狀著重狐狸之嘴耳和長尾巴特徵，呈現其狡猾和靈活。');"
+                        <br><a href="javascript:void(0);" onclick="alert('觀看imgcard簡介');"
                             class="btn btn-dark">Profile</a>
                     </div>
                 </div>
@@ -359,7 +335,7 @@
                         <h4 class="card-title">Shark</h4>
                         <br class="card-text">
                         Use sharp streamlines to show the shark's swift and energetic posture.<br>
-                        <br><a href="javascript:void(0);" onclick="alert('利用鋒利的流線形，展示鯊魚迅猛的活力姿態。');"
+                        <br><a href="javascript:void(0);" onclick="alert('觀看imgcard簡介');"
                             class="btn btn-dark">Profile</a>
                     </div>
                 </div>
@@ -377,7 +353,7 @@
                         <br class="card-text">
                         Bright geometric color blocks are used to form the parrot's feathers and curved beak, showing
                         its colorful vitality.
-                        <br><a href="javascript:void(0);" onclick="alert('用鮮豔的幾何色塊，構成鸚鵡羽毛和彎曲的喙，展現其多彩活力。');"
+                        <br><a href="javascript:void(0);" onclick="alert('觀看imgcard簡介');"
                             class="btn btn-dark">Profile</a>
                     </div>
                 </div>
@@ -399,7 +375,7 @@
                         <br class="card-text">
                         The lines present the slender limbs and alert figure of the mountain qiang, suggesting its agile
                         posture.<br>
-                        <br><a href="javascript:void(0);" onclick="alert('線條呈現山羌修長四肢和警戒的身形，顯喻其敏捷姿態。');"
+                        <br><a href="javascript:void(0);" onclick="alert('觀看imgcard簡介');"
                             class="btn btn-dark">Profile</a>
                     </div>
                 </div>
@@ -417,7 +393,7 @@
                         <br class="card-text">
                         Through streamlined design and patchy geometric blocks, it presents its unique striped
                         pattern.<br>
-                        <br><a href="javascript:void(0);" onclick="alert('斑馬：通過流線設計、斑塊的幾何塊，呈現其獨特的條紋圖案。');"
+                        <br><a href="javascript:void(0);" onclick="alert('觀看imgcard簡介');"
                             class="btn btn-dark">Profile</a>
                     </div>
                 </div>
@@ -435,7 +411,7 @@
                         <br class="card-text">
                         Draw using a combination of circles in golden proportions to create its strong hind legs and
                         powerful jumping posture.
-                        <br><a href="javascript:void(0);" onclick="alert('袋鼠：利用黃金比例的圓形組合繪製，創造出其強壯後腿和有力跳躍姿勢。');"
+                        <br><a href="javascript:void(0);" onclick="alert('觀看imgcard簡介');"
                             class="btn btn-dark">Profile</a>
                     </div>
                 </div>
@@ -456,7 +432,7 @@
                         <br class="card-text">
                         Use color tones to enhance the sense of mystery, and use streamlined lines to show its
                         symmetrical beauty.
-                        <br><a href="javascript:void(0);" onclick="alert('蝙蝠：以色調提升神祕感，搭配流線條展現其對稱之美。');"
+                        <br><a href="javascript:void(0);" onclick="alert('觀看imgcard簡介');"
                             class="btn btn-dark">Profile</a>
                     </div>
                 </div>
@@ -472,7 +448,7 @@
                         <h4 class="card-title">Cat</h4>
                         <br class="card-text">
                         With a round base as the base, the side profile shows the cat’s unique and agile posture.<br>
-                        <br><a href="javascript:void(0);" onclick="alert('以圓形為基底，構成側面呈現貓咪獨有的靈動姿態。');"
+                        <br><a href="javascript:void(0);" onclick="alert('觀看imgcard簡介');"
                             class="btn btn-dark">Profile</a>
                     </div>
                 </div>
@@ -490,7 +466,7 @@
                         <br class="card-text">
                         Gradient colors are combined with bright tones, and the golden ratio is used to compose the
                         image to form the tortoise's solid shell and steady pace.
-                        <br><a href="javascript:void(0);" onclick="alert('以漸層色彩搭配亮色調，運用黃金比例構圖，構成陸龜堅固的龜殼和穩重的步伐。');"
+                        <br><a href="javascript:void(0);" onclick="alert('觀看imgcard簡介');"
                             class="btn btn-dark">Profile</a>
                     </div>
                 </div>
@@ -510,7 +486,7 @@
                         <h4 class="card-title">Ape</h4>
                         <br class="card-text">
                         Use light and shade and simple lines to express the gorilla's strong muscles and strength.<br>
-                        <br><a href="javascript:void(0);" onclick="alert('用明暗度和簡單線條，表現大猩猩其強壯的肌肉和力量。');"
+                        <br><a href="javascript:void(0);" onclick="alert('觀看imgcard簡介');"
                             class="btn btn-dark">Profile</a>
                     </div>
                 </div>
@@ -528,7 +504,7 @@
                         <br class="card-text">
                         Mix desaturated tones and gradient effects to create a turtle's streamlined shell and elegant
                         swimming posture.
-                        <br><a href="javascript:void(0);" onclick="alert('混合不飽和色調及漸層效果，構成海龜流線型龜殼和優雅的游動姿態。');"
+                        <br><a href="javascript:void(0);" onclick="alert('觀看imgcard簡介');"
                             class="btn btn-dark">Profile</a>
                     </div>
                 </div>
@@ -546,7 +522,7 @@
                         <br class="card-text">
                         The use of warm and unsaturated colors, combined with streamlined lines, presents a static,
                         vivid and three-dimensional creative design style.<br>
-                        <br><a href="javascript:void(0);" onclick="alert('運用暖色系與不飽合色彩，搭配流線線條，呈現靜態活且生動的立體創意設計風格。');"
+                        <br><a href="javascript:void(0);" onclick="alert('觀看imgcard簡介');"
                             class="btn btn-dark">Profile</a>
                     </div>
                 </div>
@@ -568,7 +544,7 @@
                         <br class="card-text">
                         Dolphin: The color tone presents a visual three-dimensional effect, and the streamlined shape
                         shows its dexterity and friendly characteristics.<br>
-                        <br><a href="javascript:void(0);" onclick="alert('海豚：色調呈現視覺立體效果，流線型展示其靈巧和友善特徵。');"
+                        <br><a href="javascript:void(0);" onclick="alert('觀看imgcard簡介');"
                             class="btn btn-dark">Profile</a>
                     </div>
                 </div>
@@ -586,7 +562,7 @@
                         <br class="card-text">
                         The combination of colors and the sharp features of the front and rear limbs contribute to its
                         color-changing skin and flexible profile.<br>
-                        <br><a href="javascript:void(0);" onclick="alert('色系組合與利落的前後肢特徵，構成其變色皮膚和靈活的側寫。');"
+                        <br><a href="javascript:void(0);" onclick="alert('觀看imgcard簡介');"
                             class="btn btn-dark">Profile</a>
                     </div>
                 </div>
@@ -604,7 +580,7 @@
                         <br class="card-text">
                         With its short legs, steady body shape and two small round ears, the combination of brightness
                         creates a three-dimensional, simple and cute visual effect.
-                        <br><a href="javascript:void(0);" onclick="alert('通過其短腿、穩重身形狀與兩個小圓耳朵，搭配亮度構成立體又簡潔可愛的視覺效果。');"
+                        <br><a href="javascript:void(0);" onclick="alert('觀看imgcard簡介');"
                             class="btn btn-dark">Profile</a>
                     </div>
                 </div>
